syntax = "proto3";

package proto;

option go_package = "rusve/proto";

import "users.proto";
import "profile.proto";
import "notes.proto";
import "utils.proto";

message Empty {}

message Id {
    string id = 1;
}

message AuthResponse {
    string token = 1;
    User user = 2;
}

service UsersService {
    rpc Auth(Empty) returns (AuthResponse) {}

    rpc GetProfileByUserId(Empty) returns (Profile) {}
    rpc CreateProfile(Profile) returns (Profile) {}
}

message NoteId {
    string note_id = 1;
    string user_id = 2;
}

service NotesService {
    rpc GetNotesByUserId(Empty) returns (stream Note) {}
    rpc GetNoteById(Id) returns (Note) {}
    rpc CreateNote(Note) returns (Note) {}
    rpc DeleteNoteById(Id) returns (Empty) {}
}

message TargetId {
    string target_id = 1;
    FileType type = 2;
}

message FileId {
    string file_id = 1;
    string target_id = 2;
}

service UtilsService {
    rpc GetFiles(TargetId) returns (stream File) {}
    rpc GetFile(FileId) returns (File) {}
    rpc CreateFile(File) returns (File) {}
    rpc DeleteFile(FileId) returns (File) {}
}

